# party-directive

./: .gitignore  pyproject.toml
partydirective/: backgrounds_data.py  chargen.py  clock.py  conditions.py  items_data.py  models.py  resolution.py  traits_data.py
scripts/: dump_character.py
tests/: conftest.py  test_chargen.py  test_clocks.py  test_e2e.py  test_models.py  test_resolution.py
web/: KAI.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css
web/src/components/: BackstoryHook.test.tsx  BackstoryHook.tsx  CharacterCard.test.tsx  CharacterCard.tsx  ConditionList.test.tsx  ConditionList.tsx  InventoryList.test.tsx  InventoryList.tsx  StatBlock.test.tsx  StatBlock.tsx  TraitList.test.tsx  TraitList.tsx
web/src/fixtures/: characters.json  fixtureCharacters.ts
web/src/test/: setup.ts
web/src/types/: character.ts
